Bleed effect, forum link, minor style fix

--- a/main.less
+++ b/main.less
@@ -2497,6 +2497,10 @@ input[type=number], .lot-quantity > input, .price > input {
     max-width: 232px;
 }
 
+.letter-from {
+    .allow-user-select;
+}
+
 .letter-subject, .letter-created {
     font-size: smaller;
 }
